--- a/includes/changelog.twig
+++ b/includes/changelog.twig
@@ -7,7 +7,7 @@
             <p><strong>CSS &amp; HTML changes:</strong> For most users this update does not require any action! If you have overwritten some CSS in your Wordpress theme be advised that the default styling for Fontsampler switched to flex-box based layout formatting. <br><strong>Please review your site after the update to make sure everything looks like it should.</strong></p>
         </div>
     </div>
-    <h2>Here is what changed with this latest release (0.4.0 &amp; 0.4.1):</h2>
+    <h2>Here is what changed with this latest release (0.4.0, 0.4.1 &amp; 0.4.2):</h2>
     <div class="text-box">
         <ul class="real-list">
             <li class="fontsampler-changelog-feature"><strong>FEATURE:</strong> Implemented option for handling notdef glyphs</li>
