fixed css compatibility to other plugins (avoid .slider class) and implemented #138 improving slider performance in the backend

--- a/admin/css/admin-options.less
+++ b/admin/css/admin-options.less
@@ -237,8 +237,10 @@
         }
     }
 
-    .slider {
+    .fontsampler-admin-slider {
         margin: 0.5em 0;
+        width: 10rem;
+        display: block;
     }
 
     // the wrapper element for inline uploads, like for the buy and specimen link images
