--- a/admin/css/admin-settings.less
+++ b/admin/css/admin-settings.less
@@ -16,7 +16,7 @@
             float: left;
         }
 
-        div.slider {
+        div.fontsampler-admin-slider {
             display: inline-block;
             width: 20em;
         }
