--- a/includes/partials/options-features-slider.twig
+++ b/includes/partials/options-features-slider.twig
@@ -17,7 +17,8 @@
             value: use_default ? slider_default : initial,
             min: slider_min,
             max: slider_max,
-            group: slider_group
+            group: slider_group,
+            type: slider_type
         }) }}
     </div>
 {% endblock %}
