--- a/includes/partials/options-features.twig
+++ b/includes/partials/options-features.twig
@@ -33,6 +33,7 @@
                 slider_min: slider_ranges[f.name][0],
                 slider_max: slider_ranges[f.name][1],
                 slider_group: f.name,
+                slider_type: 'min',
                 set_uses_defaults: set.use_defaults
             }) }}
 
@@ -47,6 +48,7 @@
                 slider_min: slider_ranges[f.name][0],
                 slider_max: slider_ranges[f.name][1],
                 slider_group: f.name,
+                slider_type: 'initial',
                 set_uses_defaults: set.use_defaults
             }) }}
 
@@ -61,6 +63,7 @@
                 slider_min: slider_ranges[f.name][0],
                 slider_max: slider_ranges[f.name][1],
                 slider_group: f.name,
+                slider_type: 'max',
                 set_uses_defaults: set.use_defaults
             }) }}
         </div>
