--- a/includes/partials/slider.twig
+++ b/includes/partials/slider.twig
@@ -1,6 +1,7 @@
 <label class="fontsampler-admin-slider-label">
 		<span class="setting-description">{{ label }}
-            <input data-name="{{ name }}"
+            <input autocomplete="off"
+                   data-name="{{ name }}"
                    class="current-value"
                    value="{{ value }}"
                    type="text"
@@ -8,9 +9,16 @@
                    {#data-validation-allowing="range[1;256]"#}
                    >
 		</span>
-    <div class="slider">
+    <div class="fontsampler-admin-slider">
         {# Note that the min and max attributes are necessary to restrain the value #}
-        <input type="range" data-group="{{ group }}" name="{{ name }}" value="{{ value }}" 
-            min="{{ min }}" max="{{ max }}" {% if is_rtl == 1%} data-direction="rtl" {% endif %}>
+        <input autocomplete="off" 
+               type="range" 
+               data-group="{{ group }}" 
+               data-type="{{ type }}" 
+               name="{{ name }}" 
+               value="{{ value }}" 
+               min="{{ min }}" 
+               max="{{ max }}" 
+               {% if is_rtl == 1%} data-direction="rtl" {% endif %}>
     </div>
 </label>
