updated supporters to about page

--- a/includes/about.twig
+++ b/includes/about.twig
@@ -10,7 +10,7 @@
         <a href="https://github.com/kontur/fontsampler-wordpress-plugin/issues">open an issue on github</a>!</p>
 
     <h2>Supported by</h2>
-    <p>The following people have supported the development of this plugin through their generous donations:</p>
+    <p>A round of applause to the following people who have supported the continuous development of this plugin through their generous donations:</p>
     <ul class="real-list">
         <li><strong><a href="http://dunwichtype.com/">James Puckett</a></strong></li>
         <li><strong>George Thomas</strong></li>
@@ -19,6 +19,9 @@
         <li><a href="http://setsailstudios.com/">Sam Parrett</a></li>
         <li><a href="http://www.phitradesign-fonts.com/">Philip Trautmann</a></li>
         <li><a href="https://brandingwithtype.com/typefaces/modelica">Alberto Romanos</a></li>
+        <li><a href="http://typeverything.com/">Andrei Robu</a></li>
+        <li><a href="http://xo.houseofpretty.com">Patric King</a></li>
+        <li><a href="https://melvolkman.com/">Mel Volkman</a></li>
     </ul>
     <p>For help with translating the plugin (language) my thanks goes to:</p>
     <ul class="real-list">
