fixed display of fina and init ot features in dialog

--- a/includes/changelog.twig
+++ b/includes/changelog.twig
@@ -4,14 +4,13 @@
 <h1>Thanks for updating Fontsampler!</h1>
     <div class="text-box">
         <div class="notice notice-info">
-            <p>This update only includes minor improvements to the admin interface. No action required, hurray!</p>
+            <p>This update only includes minor improvements to Opentype feature detection. No action required, hurray!</p>
         </div>
     </div>
-    <h2>Here is what changed with this latest release 0.4.3:</h2>
+    <h2>Here is what changed with this latest release 0.4.4:</h2>
     <div class="text-box">
         <ul class="real-list">
-            <li class="fontsampler-changelog-tweak"><strong>TWEAK:</strong> Improved admin interface slider responsivness and sanity checks</li>
-            <li class="fontsampler-changelog-tweak"><strong>TWEAK:</strong> Fixed compability with misc plugins (css class conflicts)</li>
+            <li class="fontsampler-changelog-fix"><strong>FIX:</strong> Made 'init' and 'fina' Opentype Features available in the context menu for fonts that support them</li>
         </ul>
     </div>
     <br>
