added new supporter to about

--- a/includes/about.twig
+++ b/includes/about.twig
@@ -22,6 +22,7 @@
         <li><a href="http://typeverything.com/">Andrei Robu</a></li>
         <li><a href="http://xo.houseofpretty.com">Patric King</a></li>
         <li><a href="https://melvolkman.com/">Mel Volkman</a></li>
+        <li><a href="https://hamblyfreeman.com/">James Hambly</a></li>
     </ul>
     <p>For help with translating the plugin (language) my thanks goes to:</p>
     <ul class="real-list">
