--- a/includes/about.twig
+++ b/includes/about.twig
@@ -10,19 +10,25 @@
         <a href="https://github.com/kontur/fontsampler-wordpress-plugin/issues">open an issue on github</a>!</p>
 
     <h2>Supported by</h2>
-    <p>A round of applause to the following people who have supported the continuous development of this plugin through their generous donations:</p>
+    <p>A round of applause to the following folks who have supported the continuous development of this plugin through their generous donations:</p>
     <ul class="real-list">
         <li><strong><a href="http://dunwichtype.com/">James Puckett</a></strong></li>
         <li><strong>George Thomas</strong></li>
         <li><strong><a href="https://paulogoode.com">Paulo Goode</a></strong></li>
         <li><strong><a href="http://quadrat.com">David Vereschagin</a></strong></li>
+        <li><strong><a href="https://canadatype.com/">Canada Type</a></strong></li>
         <li><a href="http://setsailstudios.com/">Sam Parrett</a></li>
         <li><a href="http://www.phitradesign-fonts.com/">Philip Trautmann</a></li>
         <li><a href="https://brandingwithtype.com/typefaces/modelica">Alberto Romanos</a></li>
         <li><a href="http://typeverything.com/">Andrei Robu</a></li>
         <li><a href="http://xo.houseofpretty.com">Patric King</a></li>
         <li><a href="https://melvolkman.com/">Mel Volkman</a></li>
+        <li><a href="">Derek Parker</a></li>
         <li><a href="https://hamblyfreeman.com/">James Hambly</a></li>
+        <li>Stephen Polizzi</li>
+        <li>Arthur Ersosi</li>
+        <li><a href="https://www.almamunhossen.com/">Al-Mamun Hossen</a></li>
+        <li>Cabal Publishing</li>
     </ul>
     <p>For help with translating the plugin (language) my thanks goes to:</p>
     <ul class="real-list">
@@ -45,7 +51,7 @@
     <p><a href="https://github.com/kontur/fontsampler-wordpress-plugin/blob/master/LICENSE.txt">See license</a></p>
     <p><a href="http://choosealicense.com/licenses/gpl-3.0/#">Read a simplified version of what this license means</a>
     </p>
-    <p>&copy; 2016 - 2018 Johannes Neumeier</p>
+    <p>&copy; 2016 - 2020 Underscore Type, Johannes Neumeier</p>
     <br>
     <p>This plugin uses the included open source libraries and projects under the hood, some of which are listed here:</p>
     <ul class="real-list">
