--- a/includes/footer.twig
+++ b/includes/footer.twig
@@ -5,7 +5,8 @@
 			<li><a href="https://paulogoode.com"><img src="{{ plugin_dir_url }}/supporter-logos/paulo-goode-logo.png" alt="Paulo Goode"></a></li>
 			<li><a href="http://quadrat.com"><img src="{{ plugin_dir_url }}/supporter-logos/quadrat-logo.png" alt="Quadrat"></a></li>
 			<li><img src="{{ plugin_dir_url }}/supporter-logos/liberty-type-logo.png" alt="Liberty Type"></li>
-			<li><a href="http://dunwichtype.com/"><img src="{{ plugin_dir_url }}/supporter-logos/james-puckett-logo.png" alt="Dunwich Type"></a></li>
+			<li class="logo-square"><a href="http://dunwichtype.com/"><img src="{{ plugin_dir_url }}/supporter-logos/james-puckett-logo.png" alt="Dunwich Type"></a></li>
+			<li class="logo-square"><a href="https://canadatype.com/"><img src="{{ plugin_dir_url }}/supporter-logos/canada-type-logo.png" alt="Canada Type"></a></li>
 		</ul>
 	</div>
 	<div class="fontsampler-creators">
