Implemented #165 to duplicate fontsamplers, fontsampler admin view pagination has natural numbering, version bump tp 0.4.7

--- a/includes/changelog.twig
+++ b/includes/changelog.twig
@@ -7,10 +7,12 @@
             <p>This update only includes minor improvements to Opentype feature detection. No action required, hurray!</p>
         </div>
     </div>
-    <h2>Here is what changed with this latest release 0.4.4:</h2>
+    <h2>Here is what changed with this latest release:</h2>
     <div class="text-box">
         <ul class="real-list">
-            <li class="fontsampler-changelog-fix"><strong>FIX:</strong> Made 'init' and 'fina' Opentype Features available in the context menu for fonts that support them</li>
+            <li class="fontsampler-changelog-feature"><strong>FEATURE:</strong> Added a button to the admin interface to simplify duplicating an entire Fontsampler.</li>
+            <li class="fontsampler-changelog-feature"><strong>FEATURE:</strong> Added a general settings option to hide the webfont paths used in Fontsampler. While this does not protect the files from download, it obfuscates their physical location on the server.</li>
+            <li class="fontsampler-changelog-fix"><strong>FIX:</strong> Eliminated a problem where Fontsamplers settings interfered with the Media Gallery upload file type permissions.</li>
         </ul>
     </div>
     <br>
