--- a/css/fontsampler-css.css
+++ b/css/fontsampler-css.css
@@ -3,15 +3,15 @@
 */
 @font-face {
   font-family: "fontsampler-icons";
-  src: url("fontsampler-icons_40418fc6fecf906d9588eca8b9dcf8c1.eot");
-  src: url("fontsampler-icons_40418fc6fecf906d9588eca8b9dcf8c1.eot?#iefix") format("embedded-opentype"), url("fontsampler-icons_40418fc6fecf906d9588eca8b9dcf8c1.woff") format("woff"), url("fontsampler-icons_40418fc6fecf906d9588eca8b9dcf8c1.ttf") format("truetype"), url("fontsampler-icons_40418fc6fecf906d9588eca8b9dcf8c1.svg#fontsampler-icons") format("svg");
+  src: url("./fontsampler-icons_40418fc6fecf906d9588eca8b9dcf8c1.eot");
+  src: url("./fontsampler-icons_40418fc6fecf906d9588eca8b9dcf8c1.eot?#iefix") format("embedded-opentype"), url("./fontsampler-icons_40418fc6fecf906d9588eca8b9dcf8c1.woff") format("woff"), url("./fontsampler-icons_40418fc6fecf906d9588eca8b9dcf8c1.ttf") format("truetype"), url("./fontsampler-icons_40418fc6fecf906d9588eca8b9dcf8c1.svg#fontsampler-icons") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   @font-face {
     font-family: "fontsampler-icons";
-    src: url("fontsampler-icons_40418fc6fecf906d9588eca8b9dcf8c1.svg#fontsampler-icons") format("svg");
+    src: url("./fontsampler-icons_40418fc6fecf906d9588eca8b9dcf8c1.svg#fontsampler-icons") format("svg");
   }
 }
 [data-icon]:before {
