--- a/includes/about.twig
+++ b/includes/about.twig
@@ -29,6 +29,9 @@
         <li>Arthur Ersosi</li>
         <li><a href="https://www.almamunhossen.com/">Al-Mamun Hossen</a></li>
         <li>Cabal Publishing</li>
+        <li><a href="https://andrewgraham.dev/">Andrew Graham</a></li>
+        <li>Linh Nguyen</li>
+        <li><a href="http://missbolddesign.com.au/">Miss Bold Design</a></li>
     </ul>
     <p>For help with translating the plugin (language) my thanks goes to:</p>
     <ul class="real-list">
