--- a/admin/css/admin-footer.less
+++ b/admin/css/admin-footer.less
@@ -79,7 +79,7 @@
         }
 
         .fontsampler-donate {
-            padding: 0 2em 1.5em;
+            padding: 0.5em 2em 1.5em;
             margin: 1em 0;
             background: white;
             text-align: left;
@@ -88,7 +88,7 @@
             form {
                 display: inline-block;
                 position: relative;
-                top: 0.85em;
+                top: 0.5em;
             }
             input {
                 border: 0;
